--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Show Distance From The Sun</h1>
-    <form action="">
+    <!--<form> isn't necessary, because of you don't want to post this form to server -->
         <div>
            <label for="planet-name">Name of planet:</label>
             <input type="text" name="planet-name" id="planet-name">
@@ -21,6 +21,6 @@
             <input type="text" name="diameter" id="diameter">
         </div>
         <input type="submit" id="show" name="show" value="Show">
-    </form>
+    <!--</form>-->
 </body>
 </html>
